chore : .env 파일을 활용한 서버 포트, jpa 및 mariaDB와 데이터베이스 관련 설정 추가 → #1

--- a/resource-server/src/main/resources/application.yml
+++ b/resource-server/src/main/resources/application.yml
@@ -1,3 +1,35 @@
+server:
+  port: ${PORT}
+
 spring:
   application:
     name: resource-server
+  # .env import
+  config:
+    import: optional:file:.env[.properties]
+
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+
+    hibernate:
+      ddl-auto: update
+
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+
+  defer-datasource-initialization: true # 스프링부트 2.5 이상부터 초기 sql 데이터 입력시 필요함
+
+  sql: # 모든 데이터베이스에 sql 스크립트를 동작시킴
+    init:
+      mode: always
+
+
+  logging.level:
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace # console에서 ? 값 보여줌
