build : 빌드용 jar 파일 설정 추가

--- a/resource-server/build.gradle
+++ b/resource-server/build.gradle
@@ -39,3 +39,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+bootJar{
+	archivesBaseName = 'goldmarket'
+	archiveFileName = 'goldmarket_resource-server.jar'
+	archiveVersion = "0.0.1"
+}
